force-app/main/default/objects/ssot__EngagementAction__dlm/fields/ssot__EngagementAction_LeadlId_map_Lead_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementAction_LeadlId_map_Lead_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EngagementAction_LeadlId_map_Lead_Id_N_1</label>
    <referenceTo>ssot__Lead__dlm</referenceTo>
    <relationshipLabel>EngagementAction_LeadlId_map_Lead_Id_N_1</relationshipLabel>
    <relationshipName>EngagementAction_LeadlId_map_Lead_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>