force-app/main/default/objects/ssot__EngagementAction__dlm/fields/ssot__EngagementCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementCategory__c</fullName>
    <label>Engagement Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>