force-app/main/default/objects/ssot__EngagementAction__dlm/fields/ssot__EngagementDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementDateTime__c</fullName>
    <label>Engagement Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>