force-app/main/default/objects/ssot__EngagementAction__dlm/fields/ssot__InPersonEngagementId__c.field-meta.xml
<CustomField>
    <fullName>ssot__InPersonEngagementId__c</fullName>
    <label>In Person Engagement</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InPersonEngagementId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>