force-app/main/default/objects/ssot__EngagementAction__dlm/fields/ssot__MailLetterEngagementId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MailLetterEngagementId__c</fullName>
    <label>Mail Letter Engagement</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MailLetterEngagementId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>