force-app/main/default/objects/ssot__EngagementAction__dlm/fields/ssot__rel_1720024057745_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720024057745_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EngagementAction_DeviceLocaleId_map__rel</label>
    <referenceTo>ssot__Locale__dlm</referenceTo>
    <relationshipLabel>EngagementAction_DeviceLocaleId_map__rel</relationshipLabel>
    <relationshipName>rel_1720024057745_end</relationshipName>
    <type>Lookup</type>
</CustomField>