force-app/main/default/objects/ssot__EngagementAction__dlm/fields/ssot__rel_1720024099535_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720024099535_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EngagementAction_AccountContactId_ma_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>EngagementAction_AccountContactId_ma_rel</relationshipLabel>
    <relationshipName>rel_1720024099535_end</relationshipName>
    <type>Lookup</type>
</CustomField>