force-app/main/default/objects/ssot__EngagementAction__dlm/fields/ssot__rel_1729794835455_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729794835455_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EngagementAction_PersonalizationCont_rel</label>
    <referenceTo>ssot__PersonalizationLog__dlm</referenceTo>
    <relationshipLabel>EngagementAction_PersonalizationCont_rel</relationshipLabel>
    <relationshipName>rel_1729794835455_end</relationshipName>
    <type>Lookup</type>
</CustomField>