force-app/main/default/objects/ssot__EngagementAction__dlm/fields/ssot__VoiceCallEngagementId__c.field-meta.xml
<CustomField>
    <fullName>ssot__VoiceCallEngagementId__c</fullName>
    <label>Voice Call Engagement</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VoiceCallEngagementId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>